--- a/my-app/src/App/Components/Task/Layout/TaskLayout.module.css
+++ b/my-app/src/App/Components/Task/Layout/TaskLayout.module.css
@@ -1,21 +1,43 @@
 .taskContainer {
-	position: relative;
-	padding: 12px 8px 12px 40px;
-	background: #eee;
-	font-size: 18px;
-	transition: 0.2s;
-	margin-bottom: 5px;
-	border: 2px solid darkslategrey;
-	border-radius: 10px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 	color: #333;
-}
-
-.taskHeader {
-	font-weight: bold;
 	font-size: 18px;
-	margin-bottom: 5px;
+	font-family: sans-serif;
+	margin: 0;
+	margin-bottom: 10px;
+	border: none;
+	flex: 1;
+	background-color: azure;
+	padding: 5px;
 }
 
-.taskBody {
-	font-style: italic;
+.taskContainer * {
+	margin: 0;
+	padding: 5px;
+	font-size: 18px;
+	font-family: sans-serif;
+	color: #333;
+	border: none;
+}
+
+.task {
+	display: inline-block;
+}
+
+.buttonContainer {
+	padding: 0;
+}
+
+.button {
+	outline: 2px solid azure;
+	background-color: darkslategrey;
+	color: azure;
+	padding: 5px 10px;
+}
+
+.disabled {
+	opacity: 0.7;
+	cursor: not-allowed;
 }
