--- a/my-app/src/App/Components/TaskList/Layout/TaskListLayout.module.css
+++ b/my-app/src/App/Components/TaskList/Layout/TaskListLayout.module.css
@@ -1,13 +1,49 @@
 .taskListContainer {
-	margin: 5%;
-	padding: 20px;
-	background-color: darkseagreen;
-	border-radius: 10px;
+	padding: 18px;
+	background-color: cadetblue;
+	width: 600px;
+	margin-bottom: 18px;
+}
+
+.taskListContainer * {
+	font-family: sans-serif;
+}
+
+.taskList {
+	text-align: center;
+	color: azure;
+	margin: 35px;
 }
 
 .taskListHeader {
-	font-weight: 800;
+	font-weight: 700;
 	font-size: 24px;
-	margin-bottom: 25px;
+	color: azure;
+	margin-bottom: 6px;
 	text-align: center;
+}
+
+.checkBoxContainer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 0;
+	margin-bottom: 16px;
+	color: azure;
+	font-size: 18px;
+}
+
+.input {
+	margin-left: 5px;
+	width: 18px;
+	height: 18px;
+}
+
+input:checked {
+	accent-color: darkslategrey;
+	color: azure;
+}
+
+span {
+	font-size: 24px;
 }
