--- a/my-app/src/App/Components/Information/Information.module.css
+++ b/my-app/src/App/Components/Information/Information.module.css
@@ -1,10 +1,20 @@
 .container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 	background-color: lightseagreen;
 	color: darkslategray;
-	padding: 20px;
 	margin-bottom: 5px;
+	height: 100px;
 
 	font-size: 30px;
 	text-align: center;
 	border: 2px solid darkslategray;
+}
+
+.text {
+	margin: 0;
+	padding: 5px;
+	vertical-align: middle;
 }
